add slider to homepage and fix some bugs

--- a/css/style.css
+++ b/css/style.css
@@ -307,39 +307,42 @@ body {
     width: 70%;
     height: 250px;
 }
-
-.section-font {
+.team-section {
+    background: #ededed;
+}
+.team-section-first-box {
     margin-top: 80px;
     width: 70%;
     height: 250px;
 }
 
-.text-nine {
+.team-section h5 {
     font-size: 25px;
     margin-top: 50px;
     color: #0186c9;
 }
 
-.text-ten {
+.first-item p {
     padding: 5px 0 0 215px;
     font-size: 27px;
 }
 
-.section-font-two {
+.team-section-second-box {
     margin-bottom: 80px;
     width: 70%;
     height: 250px;
 }
 
-.text-eleven {
+.second-item p {
     padding-right: 155px;
     font-size: 19px;
     color: #7a7a7a;
+    text-align: justify;
 }
 
 /* Start Section Five */
 
-.under-section {
+.feature{
     border-bottom: 1px solid #cecece;
 }
 
@@ -354,17 +357,17 @@ body {
     margin-right: 40px;
 }
 
-.text-twelve {
+.feature h4 {
     margin-top: 10px;
     margin-right: 40px;
-    font-size: 23px;
+    font-size: 19px;
     font-weight: 600;
 }
 
-.text-thirteen {
+.feature p {
     margin-top: 10px;
     margin-right: 40px;
-    font-size: 17px;
+    font-size: 13px;
     font-weight: 500;
     padding-bottom: 70px;
     padding-left: 45px;
@@ -372,7 +375,29 @@ body {
 }
 
 /* Start Slider */
+.swiper-container {
+    width: 600px;
+    height: auto;
+}
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
 
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+}
 .slider-button-next {
     font-size: 45px;
     margin-top: 130px;
@@ -1468,10 +1493,12 @@ body {
 
 /* Devices under 992px (xl) */
 @media (max-width: 991.98px) {
-    .text-ten {
-        padding: 5px 0 0 0;
+    .first-item p {
+        padding: 5px 5px 0 0;
     }
-
+    .team-section-first-box,.team-section-second-box{
+        width: 100%;
+    }
     .image-two {
         margin-top: 0;
     }
@@ -1481,8 +1508,9 @@ body {
         margin-bottom: 0;
     }
 
-    .text-eleven {
+    .second-item p {
         padding-right: 0;
+        text-align: justify;
     }
 
     .border-section {
